# KoikatuGen

./: .gitignore  .gitmodules  Makefile  README.md  create_dataset.py  json_to_csv.py  pyproject.toml  requirements.txt  vae_generate.py  vae_train.py
koikatugen/: json_to_csv.py  vae_generate.py  vae_train.py
koikatugen/dataset/: loader.py  schema.py  transforms.py
koikatugen/models/: base.py  vae.py
koikatugen/scripts/: create_dataset.py  generate_ctgan.py  generate_vae.py  template_utils.py  train_ctgan.py  train_vae.py  training_utils.py
