[project]
name = "koikatugen"
version = "0.1.0"
description = ""
authors = [{ name = "tropical_362827", email = "wired.wireless0@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "kkloader>=0.1.20",
    "numpy>=2.0",
    "pandas>=2.2.2,<3",
    "pyarrow>=23.0.1",
    "torch>=2.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "ruff>=0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["koikatugen"]
